.metadata/.plugins/org.eclipse.cdt.ui/bit_led.build.log
11:58:28 **** Incremental Build of configuration Debug for project bit_led ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:184:13: error: invalid storage class for function 'MX_GPIO_Init'
  184 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:233:1: error: expected declaration or statement at end of input
  233 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:50:13: warning: 'MX_GPIO_Init' used but never defined
   50 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:224:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  224 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:184:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  184 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:142:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  142 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:58:29 Build Failed. 3 errors, 4 warnings. (took 1s.116ms)

